--- a/www/src/main/resources/templates/place/story_write.html
+++ b/www/src/main/resources/templates/place/story_write.html
@@ -3,62 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>글 작성하기</title>
-    <style>
-        .content-container {
-            max-width: 800px;
-            margin: auto;
-            padding: 20px;
-            font-family: Arial, sans-serif;
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        .form-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-
-        .form-group input[type="text"],
-        .form-group input[type="date"],
-        .form-group textarea {
-            width: 100%;
-            padding: 8px;
-            margin: 4px 0;
-            box-sizing: border-box;
-        }
-
-        .form-group input[type="file"] {
-            padding: 5px;
-        }
-
-        .form-group button {
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-
-        .form-group button:hover {
-            background-color: #0056b3;
-        }
-
-        .form-group .add-image-button {
-            margin-top: 10px;
-            background-color: #28a745;
-        }
-
-        .form-group .add-image-button:hover {
-            background-color: #218838;
-        }
-
-        .form-group .file-inputs {
-            margin-top: 10px;
-        }
-    </style>
+    
+    <link href="/css/mainStyle.css" rel="stylesheet">
+    <link href="/css/stowriteStyle.css" rel="stylesheet">
+    
     <script>
         function addFileInput() {
             const fileInputContainer = document.getElementById('file-input-container');
@@ -72,6 +20,7 @@
     </script>
 </head>
 <body>
+<th:block th:replace="/fragment::header"></th:block>
 
 <div class="content-container">
     <h2>글 작성하기</h2>
@@ -115,6 +64,6 @@
         </div>
     </form>
 </div>
-
+<th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
