--- a/www/src/main/resources/templates/member/accommodation.html
+++ b/www/src/main/resources/templates/member/accommodation.html
@@ -36,7 +36,7 @@
 
             <!-- 이미지가 없을 때 -->
             <img th:if="${accommodation.firstimage == null or accommodation.firstimage.isEmpty()}"
-                 th:src="@{/image/logo_w.png}" alt="Default Image" />
+                 th:src="@{/image/replace.png}" alt="Default Image" />
         </li>
     </ul>
 
@@ -68,7 +68,7 @@
 
             <!-- 이미지가 없을 때 -->
             <img th:if="${accommodation.firstimage == null or accommodation.firstimage.isEmpty()}"
-                 th:src="@{/image/logo_w.png}" alt="Default Image" />
+                 th:src="@{/image/replace.png}" alt="Default Image" />
         </li>
     </ul>
 
