회원가입css, 예외처리

--- a/www/src/main/resources/static/css/signupErrorStyle.css
+++ b/www/src/main/resources/static/css/signupErrorStyle.css
@@ -1,6 +1,13 @@
 /* signupErrorStyle.css */
 
-body {
+#signup{
+	position: absolute;
+	  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#signup body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
@@ -8,20 +15,28 @@ body {
     color: #333;
 }
 
-h1 {
-    color: #4BB958; /* 제목 색상을 요청하신 색상으로 설정 */
+#signup h1 {
+    color: #2A3854; /* 제목 색상을 요청하신 색상으로 설정 */
     text-align: center;
     margin-top: 50px;
 }
 
-p {
+#signup .error{
+	font-weight: bold;
+}
+
+#signup .button{
+	font-weight: bold;
+}
+
+#signup p {
     color: #555;
     text-align: center;
     font-size: 18px;
     margin: 20px auto;
 }
 
-a {
+#signup a {
     display: block;
     width: 200px;
     margin: 30px auto;
@@ -34,10 +49,10 @@ a {
     font-size: 18px;
 }
 
-a:hover {
+#signup a:hover {
     background-color: #3aa547; /* 마우스를 올렸을 때 약간 어두운 색상 */
 }
 
-th:block {
+#signup th:block {
     display: block;
 }
