--- a/www/src/main/resources/static/css/signUpStyle.css
+++ b/www/src/main/resources/static/css/signUpStyle.css
@@ -6,14 +6,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-color: #f0f0f0;
+  height: 700px;
 }
 
 #signup .container {
   font-family: Arial, sans-serif;
   font-size: 24px;
-  outline: dashed 1px black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,48 +22,37 @@
 #signup .form {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
   max-width: 400px;
+  width: 100%;
   background-color: #fff;
-  padding: 20px 50px 20px 20px;
+  padding: 30px;
   border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   position: relative;
+  margin: 0 auto;
+}
+
+#signup .input {
+	background-color: #E8F0FE;
+}
+
+#signup .input:focus {
+  border: 2px solid #4BB958;
 }
 
 #signup .title {
   font-size: 28px;
-  color: royalblue;
+  color: #2A3854;
   font-weight: 600;
   letter-spacing: -1px;
+  text-align: center; /* 타이틀을 중앙에 정렬 */
+  margin-bottom: 20px;
   position: relative;
-  display: flex;
-  align-items: center;
-  padding-left: 30px;
+  margin-top:-5px;
 }
 
-#signup .title::before,
-#signup .title::after {
-  position: absolute;
-  content: "";
-  height: 16px;
-  width: 16px;
-  border-radius: 50%;
-  left: 0px;
-  background-color: royalblue;
-}
-
-#signup .title::before {
-  width: 18px;
-  height: 18px;
-  background-color: royalblue;
-}
-
-#signup .title::after {
-  width: 18px;
-  height: 18px;
-  animation: pulse 1s linear infinite;
-}
-
+/* 점을 제거하기 위해 ::before 삭제 */
 #signup .message,
 #signup .signin {
   color: rgba(88, 87, 87, 0.822);
@@ -74,14 +61,15 @@
 
 #signup .signin {
   text-align: center;
+  margin-top: 20px;
 }
 
 #signup .signin a {
-  color: royalblue;
+  color: #2A3854;
 }
 
 #signup .signin a:hover {
-  text-decoration: underline royalblue;
+  text-decoration: underline #2A3854;
 }
 
 #signup .flex {
@@ -98,7 +86,7 @@
 
 #signup .input {
   width: 100%;
-  padding: 10px 10px 20px 10px;
+  padding: 14px 50px 14px 10px;  /* 오른쪽 패딩을 조금 더 증가 */
   outline: 0;
   border: 1px solid rgba(105, 105, 105, 0.397);
   border-radius: 10px;
@@ -108,7 +96,8 @@
 #signup .input + span {
   position: absolute;
   left: 10px;
-  top: 15px;
+  top: 50%;
+  transform: translateY(-50%);
   color: grey;
   font-size: 0.9em;
   cursor: text;
@@ -116,13 +105,14 @@
 }
 
 #signup .input:placeholder-shown + span {
-  top: 15px;
+  top: 50%;
+  transform: translateY(-50%);
   font-size: 0.9em;
 }
 
 #signup .input:focus + span,
 #signup .input:valid + span {
-  top: 30px;
+  top: 35px;
   font-size: 0.7em;
   font-weight: 600;
 }
@@ -134,7 +124,7 @@
 #signup .check-btn {
   padding: 10px 15px;
   border: none;
-  background-color: royalblue;
+  background-color: #2A3854;
   color: #fff;
   border-radius: 10px;
   cursor: pointer;
@@ -144,23 +134,29 @@
 }
 
 #signup .check-btn:hover {
-  background-color: rgb(56, 90, 194);
+  background-color: #1F2B3D;
 }
 
 #signup .submit {
   border: none;
   outline: none;
-  background-color: royalblue;
+  background-color: #2A3854;
   padding: 10px;
   border-radius: 10px;
   color: #fff;
   font-size: 16px;
-  transform: .3s ease;
+  transition: background-color 0.3s ease;
+  margin-top: 20px;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
 }
 
 #signup .submit:hover {
-  background-color: rgb(56, 90, 194);
+  background-color: #F89D4A;
+  color: #2A3854;
 }
+
 .flex {
   position: relative;
 }
@@ -174,12 +170,15 @@
   transform: translateY(-50%);
   cursor: pointer;
   padding: 0;
-}
-
-#togglePassword img {
   width: 24px;
   height: 24px;
 }
+
+#togglePassword img {
+  width: 100%;
+  height: 100%;
+}
+
 @keyframes pulse {
   from {
     transform: scale(0.9);
