--- a/www/src/main/resources/templates/member/signUp.html
+++ b/www/src/main/resources/templates/member/signUp.html
@@ -13,7 +13,7 @@
 
         <div class="mid">
             <form class="form" method="post" onsubmit="return validateForm()">
-                <p class="title">Membership Register</p>
+                <p class="title">Create Account</p>
 
                 <div class="flex">
                     <label>
@@ -104,12 +104,13 @@
                     }
                 }
 
-                //닉네임 중복 확인
+                //닉네임 중복 확인: 닉네임 입력 후 다시 온블러 함수가 호출되면 다시 false값으로 바뀌어서 다른 닉네임 검증 가능하게 하는 변수
+                
                 let alertNickShown = false;
 
                 function checkUserNick() {
                     let userNick = document.querySelector("#nick").value.trim();
-                    // 널 값이 아니고  alertNickShown이 false가 아니라면
+                    // 입력값이 널 값이 아니고  alertNickShown이 false가 아니라면
                     if (userNick !== "" && !alertNickShown) {
                         fetch("http://localhost:8080/member/checkUserNick?userNick=" + userNick, {method:"get"})
                         .then(response => response.json())
@@ -171,6 +172,7 @@
                             console.error('Error checking phone number:', error);
                             alert('전화번호 확인 중 오류가 발생했습니다. 다시 시도해주세요.');
                         });
+                        //전화번호 길이가 1부터 10까지 입력되었다면 error
                     } else if (value.length > 0 && value.length < 11) {
                         alert("전화번호를 11자리로 입력해주세요.");
                         input.value = '';
@@ -235,7 +237,8 @@
                 // 폼 유효성 검사 및 비밀번호 확인
                 function validateForm() {
                     let password = document.getElementById('password').value;
-                    let confirmPassword = document.getElementById('confirmPassword').value;
+                    let confirmPassword = docum
+                    ent.getElementById('confirmPassword').value;
                     let errorMessage = document.getElementById('error-message');
 
                     if (password !== confirmPassword) {
