--- a/www/src/main/resources/templates/member/signupError.html
+++ b/www/src/main/resources/templates/member/signupError.html
@@ -9,7 +9,7 @@
 <body>
 <th:block th:replace="~{/fragment::header}"></th:block>
     <h1>회원가입 오류</h1>
-    <p>회원가입 중 문제가 발생했습니다. 다시 시도해 주세요.</p>
-    <a href="/member/signUp">다시 시도하기</a>
+    <p>회원가입에 실패했습니다. 다시 시도해 주세요.</p>
+    <a href="/member/signUp">회원가입 다시 시도하기</a>
 <th:block th:replace="~{/fragment::footer}"></th:block></body>
 </html>
