디테일 경로 수정 및 마무리

--- a/www/src/main/resources/templates/member/detail.html
+++ b/www/src/main/resources/templates/member/detail.html
@@ -299,7 +299,9 @@ function handleLike() {
         firstimage: "[[${detailpage.firstimage}]]",
         mapx: [[${detailpage.mapx}]],
         mapy: [[${detailpage.mapy}]],
-        p_idx: [[${detailpage.idx}]]
+        p_idx: [[${detailpage.idx}]],
+        contenttypeid: [[${detailpage.contenttypeid}]],
+        contentid: [[${detailpage.contentid}]]
     };
 
     if (checkbox.checked) {
