--- a/www/src/main/resources/static/css/accomStyle00.css
+++ b/www/src/main/resources/static/css/accomStyle00.css
@@ -26,7 +26,7 @@ form {
 
 form input[type="text"] {
     width: 470px;
-    padding: 20px;
+    padding: 17px;
     font-size: 1.3em;
     border-radius: 40px;
     border: none;
@@ -45,11 +45,11 @@ form button[type="submit"] {
     border: none;
     color: #fff;
     cursor: pointer;
-    padding: 20px 30px;
+    padding: 17px 30px;
     border-radius: 30px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     position: absolute;
-    right: 345px;
+    right: 342px;
     transition: .5s ease;
     font-size: 1.3em;
 }
@@ -71,9 +71,9 @@ form button[type="submit"]:hover {
 #accom li {
     background-color: #fff;
     padding: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     transition: box-shadow 0.3s ease;
 }
 
@@ -99,10 +99,12 @@ form button[type="submit"]:hover {
 }
 
 #accom li img {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 450px;
     border-radius: 10px;
     margin-top: 10px;
+    object-fit: cover;
+    object-position: center;
 }
 
 /* 버튼 스타일 */
