--- a/www/src/main/resources/static/css/indexStyle.css
+++ b/www/src/main/resources/static/css/indexStyle.css
@@ -1,22 +1,21 @@
 @charset "UTF-8";
 
-body {
+#index-con {
     font-family: 'Noto Sans KR', sans-serif;
     background-color: #f0f4f8;
     margin: 0;
-    padding: 0;
+    padding: 10px 30px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    height: 700px;
+    border-radius: 10px;
 }
 
 h1 {
     color: #2A3854;
     margin-bottom: 20px;
     font-size: 24px;
-    text-align: left;
+    text-align: center;
 }
 
 /* .container {
@@ -38,11 +37,11 @@ h1 {
     margin-bottom: 10px; 
 }
 
-label {
+#index-con label {
     font-weight: bold;
     margin-right: 10px;
     color: #2A3854;
-    min-width: 90px;
+    min-width: 50px;
     text-align: left;
 }
 
@@ -56,7 +55,7 @@ input[type="text"] {
 }
 
 button {
-    background-color: #4BB958;
+    background-color: #2A3854;
     color: white;
     border: none;
     padding: 10px 15px;
@@ -68,7 +67,7 @@ button {
 }
 
 button:hover {
-    background-color: #2A3854;
+    background-color: #4BB958;
 }
 
 #map {
