--- a/www/src/main/resources/templates/member/accommodation.html
+++ b/www/src/main/resources/templates/member/accommodation.html
@@ -36,7 +36,7 @@
 
             <!-- 이미지가 없을 때 -->
             <img th:if="${accommodation.firstimage == null or accommodation.firstimage.isEmpty()}"
-                 th:src="@{/image/logo_w.png}" alt="Default Image" />
+                 th:src="@{/image/replace.png}" alt="Default Image" />
         </li>
     </ul>
 
@@ -48,10 +48,6 @@
         </button>
 </div>
 
-<div class="box-container">
-    <div class="box"></div>
-    <div class="box"></div>
-</div>
 
     <!-- 선택된 AreaCode의 accommodation 정보 표시 -->
     <ul th:if="${accommodationList != null and !#lists.isEmpty(accommodationList)}">
@@ -68,7 +64,7 @@
 
             <!-- 이미지가 없을 때 -->
             <img th:if="${accommodation.firstimage == null or accommodation.firstimage.isEmpty()}"
-                 th:src="@{/image/logo_w.png}" alt="Default Image" />
+                 th:src="@{/image/replace.png}" alt="Default Image" />
         </li>
     </ul>
 
