--- a/www/src/main/resources/templates/member/index.html
+++ b/www/src/main/resources/templates/member/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 	<th:block th:replace="/fragment::header"></th:block>
-	<div class="container">
+	<div class="container" id="index-con">
 		<h1>길찾기</h1>
 		<div class="form-group">
 			<label for="origin">출발지: </label> <input type="text" id="origin"
