--- a/www/src/main/resources/templates/member/myPage.html
+++ b/www/src/main/resources/templates/member/myPage.html
@@ -50,7 +50,7 @@
         </tr>
         </table>
     <a href="/place/myplace"><button class="submit">쓴 글</button></a>
-    <a th:href="@{/member/delete/{id}(id=${session.user.accounts_idx})}"><button class="submit">탈퇴</button></a>
+    <a th:href="@{/member/delete/{id}(id=${session.user.accounts_idx})}"><button class="submit" onclick="return confirm('정말 삭제하시겠습니까?');">탈퇴</button></a>
     <a href="/member/update"><button class="submit">수정</button></a>
   </div>
 
