--- a/www/src/main/resources/static/css/ann_update.css
+++ b/www/src/main/resources/static/css/ann_update.css
@@ -9,7 +9,7 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    height: auto;
+    height: 410px;
 }
 
 /* 폼 타이틀 스타일 */
