--- a/www/src/main/resources/templates/place/myplace.html
+++ b/www/src/main/resources/templates/place/myplace.html
@@ -10,7 +10,7 @@
     <th:block th:replace="/fragment::header"></th:block>
 
     <div id="mypage">
-        <h2 class="mypage-title">내가 쓴 글</h2>
+        <h2 class="mypage-title">나의 여행후기</h2>
 
         <div class="mypage">
             <table>
