--- a/www/src/main/resources/static/css/myPageStyle.css
+++ b/www/src/main/resources/static/css/myPageStyle.css
@@ -9,7 +9,11 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    height: 630px;
+    height: 640px;
+}
+
+#userProfile {
+	text-align: center;
 }
 
 .mypage-title {
@@ -19,6 +23,7 @@
     margin-bottom: 20px;
     color: #2A3854;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    margin-top: 10px;
 }
 
 /* 테이블 스타일 */
@@ -29,6 +34,11 @@
     margin-bottom: 20px;
     border-radius: 15px; /* 테두리 둥글게 */
     overflow: hidden;
+}
+
+.mypage table td a {
+	text-decoration: none;
+	color: black;
 }
 
 .mypage th, .mypage td {
