--- a/www/src/main/resources/static/css/traverserStoryStyle.css
+++ b/www/src/main/resources/static/css/traverserStoryStyle.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+#traverseStory a {
+	color: black;
+}
+
 .contents h1 {
 	position: absolute;
 	top: -100px;
@@ -104,7 +108,7 @@
 
 .inner-box {
   position: absolute;
-  background-color: #E2E2E2;
+  background-color: #f3f3f3;
   /*border: 1px solid black; /* 검정색 테두리 추가 */
   overflow: hidden;
   padding: 10px;
@@ -183,4 +187,19 @@
   transform: translate(-50%, -50%);
   background-color: white;
   border-radius: 50%;
+}
+
+#write-btn {
+	padding: 10px 20px; 
+	background-color: #0077FF; 
+	color: white; 
+	border: none; 
+	cursor: pointer;
+	font-size: 15px;
+	font-weight: bold;
+	border-radius: 30px;
+}
+
+#write-btn:hover {
+	background-color: #4BB958;
 }
