--- a/www/src/main/resources/templates/place/story_write.html
+++ b/www/src/main/resources/templates/place/story_write.html
@@ -5,7 +5,7 @@
     <title>글 작성하기</title>
     
     <link href="/css/mainStyle.css" rel="stylesheet">
-    <link href="/css/stowriteStyle.css" rel="stylesheet">
+    <link href="/css/stowriteStyle00.css" rel="stylesheet">
     
     <script>
         function addFileInput() {
@@ -22,8 +22,9 @@
 <body>
 <th:block th:replace="/fragment::header"></th:block>
 
+<div id="stoWrite">
 <div class="content-container">
-    <h2>글 작성하기</h2>
+    <h2>여행후기 작성</h2>
     <form action="/place/story_write" method="post" enctype="multipart/form-data">
         <!-- a_idx 값을 숨겨진 입력 필드로 추가 -->
         <input type="hidden" name="a_idx" th:value="${session.user.accounts_idx}">
@@ -33,22 +34,24 @@
         </div>
 
         <div class="form-group">
-            <label for="regin">지역</label>
+            <label for="regin">여행 지역</label>
             <input type="text" id="regin" name="regin" required>
         </div>
 
-        <div class="form-group">
-            <label for="seldate">시작 날짜</label>
-            <input type="date" id="seldate" name="seldate" required>
-        </div>
-        <div class="form-group">
-            <label for="enddate">끝 날짜</label>
-            <input type="date" id="enddate" name="enddate" required>
-        </div>
+        <div class="form-group date-group">
+    <div class="date-field">
+        <label for="seldate">출발 일자</label>
+        <input type="date" id="seldate" name="seldate" required>
+    </div>
+    <div class="date-field">
+        <label for="enddate">도착 일자</label>
+        <input type="date" id="enddate" name="enddate" required>
+    </div>
+</div>
 
         <div class="form-group">
             <label for="contents">내용</label>
-            <textarea id="contents" name="contents" rows="10"></textarea>
+            <textarea id="contents" name="contents" rows="5"></textarea>
         </div>
 
         <div class="form-group">
@@ -63,6 +66,7 @@
             <button type="submit">게시하기</button>
         </div>
     </form>
+</div>
 </div>
 <th:block th:replace="/fragment::footer"></th:block>
 </body>
