--- a/www/src/main/resources/templates/place/tsResult.html
+++ b/www/src/main/resources/templates/place/tsResult.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 
 <link href="/css/mainStyle.css" rel="stylesheet">
+<link href="/css/tsResultStyle.css" rel="stylesheet">
 </head>
 <body>
 
@@ -13,10 +14,8 @@
 	<div class="container">
 		<div class="contents" style="min-height: 680px;">
 
-			<h1>Search Results</h1>
-			<p>
-				검색어: <span th:text="${search}"></span>
-			</p>
+			<h1>검색 결과</h1>
+
 			<table>
 				<thead>
 					<tr>
