--- a/www/src/main/resources/templates/member/accommodation.html
+++ b/www/src/main/resources/templates/member/accommodation.html
@@ -23,12 +23,11 @@
     <ul th:if="${accommodation != null and !#lists.isEmpty(accommodation)}">
         <li th:each="accommodation : ${accommodation}">
             
-            <p>Title: 
-                <!-- 타이틀 클릭 시 외부 링크로 이동 -->
-                <a th:href="'https://www.yanolja.com/search/' + ${accommodation.addr1}" th:text="${accommodation.title}"></a>
+            <p>장소: 
+                <a th:href="@{/member/detail/{idx}(idx=${accommodation.idx},contenttypeid=32,contentid=${accommodation.contentid})}" th:text="${accommodation.title}"></a>
+                <a th:href="'https://www.yanolja.com/search/' + ${accommodation.addr1}"><button>예약하기</button></a>
             </p>
-            <p>Address: <span th:text="${accommodation.addr1}"></span></p>
-            <p>Tel: <span th:text="${accommodation.tel}"></span></p>
+            <p>주소: <span th:text="${accommodation.addr1}"></span></p>
             
             <!-- 이미지가 있을 때 -->
             <img th:if="${accommodation.firstimage != null and !accommodation.firstimage.isEmpty()}"
