--- a/www/src/main/resources/static/css/stowriteStyle00.css
+++ b/www/src/main/resources/static/css/stowriteStyle00.css
@@ -66,7 +66,7 @@ h2 {
     background-color: #218838;
 }
 
-.form-group button[type="submit"] {
+.form-group button[type="submit"], .submit-btn {
     width: 100%;
     padding: 10px;
     background-color: #2A3854;
@@ -77,7 +77,7 @@ h2 {
     cursor: pointer;
 }
 
-.form-group button[type="submit"]:hover {
+.form-group button[type="submit"]:hover, .submit-btn:hover {
     background-color: #F89D4A;
     font-weight: bold;
 }
