--- a/www/src/main/resources/static/css/tsResultStyle.css
+++ b/www/src/main/resources/static/css/tsResultStyle.css
@@ -1,9 +1,8 @@
 @charset "UTF-8";
 
 .container {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
-    
 }
 
 .contents {
@@ -30,6 +29,9 @@ table {
     width: 85%;
     border-collapse: collapse;
     margin-top: 20px;
+    border: 1px solid #2A3854; /* 테두리 설정 */
+    border-radius: 10px; /* 테두리 둥글게 설정 */
+    overflow: hidden; /* 둥근 모서리가 잘리도록 설정 */
 }
 
 table th, table td {
@@ -40,9 +42,18 @@ table th, table td {
 }
 
 table th {
-    background-color: #2A3854;
-    color: white;
+    background-color: #2A3854; /* 제목의 배경색 */
+    color: white; /* 제목의 글자색 */
     font-weight: bold;
+    border-right: 1px solid white; /* 컬럼 헤더 간 구분선 추가 */
+}
+
+table th:last-child, table td:last-child {
+    border-right: none; /* 마지막 열의 구분선 제거 */
+}
+
+table td {
+    border-right: 1px solid #ddd; /* 각 셀의 오른쪽에 구분선 추가 */
 }
 
 table td a {
@@ -57,10 +68,13 @@ table td a:hover {
 }
 
 table tbody tr:nth-child(even) {
-    background-color: #f3f3f3;
+    background-color: #f3f3f3; /* 짝수 줄 배경색 */
 }
 
 table tbody tr:hover {
-    background-color: #eef;
+    background-color: #eef; /* 마우스 오버 시 배경색 */
 }
 
+table tbody tr:last-child td {
+    border-bottom: none; /* 마지막 줄 아래쪽 테두리 제거 */
+}
