--- a/www/src/main/resources/templates/place/travelplandetail.html
+++ b/www/src/main/resources/templates/place/travelplandetail.html
@@ -86,7 +86,7 @@ function openTab(evt, tabName, day, seldate) {
                     htmlContent += `
 							        <div class="plan">
 							            <div>
-							                <div>${place.firstimage ? `<img src="${place.firstimage}" class="placefirstimage">` : `<img src="/image/logo_w.png" class="placefirstimage">`}</div>
+							                <div>${place.firstimage ? `<img src="${place.firstimage}" class="placefirstimage">` : `<img src="/image/replace.png" class="placefirstimage">`}</div>
 							                <div>
 							                    <div>
 							                        <a href="/member/detail/${place.idx}?contenttypeid=${place.contenttypeid}&contentid=${place.contentid}">
