--- a/www/src/main/resources/templates/member/detail.html
+++ b/www/src/main/resources/templates/member/detail.html
@@ -43,7 +43,7 @@
          th:src="${place.firstimage}" alt="Image" class="placefirstimage" />
         <!-- 이미지가 없을 때 -->
          <img th:if="${place['firstimage'] == null or place['firstimage'].isEmpty()}"
-          th:src="@{/image/logo_w.png}" alt="Default Image"  class="placefirstimage"/>
+          th:src="@{/image/replace.png}" alt="Default Image"  class="placefirstimage"/>
       </div>
       <div class="slide">
           <table>  
