--- a/www/src/main/resources/static/css/Customerstyle00.css
+++ b/www/src/main/resources/static/css/Customerstyle00.css
@@ -193,6 +193,7 @@ body {
 /* FAQ 섹션 스타일 */
 #faq {
 	padding: 20px;
+	
 }
 
 #first-faq {
@@ -216,13 +217,18 @@ body {
 
 /* Q&A 섹션 스타일 */
 #qna {
-	padding: 20px;
+	padding: 15px 20px 10px 20px;
+}
+
+#qna .pagemenu {
+	margin-top: 0;
+	margin-bottom: -5px;
 }
 
 .qna h2 {
 	text-align: center;
     font-size: 24px;
-    margin-bottom: 20px;
+    margin: 20px 0; /* 위아래로 20px의 여백을 줍니다 */
     color: #2A3854;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
@@ -337,4 +343,32 @@ body {
     display: block;
 }
 
+.search {
+    display: flex; /* 입력 필드와 버튼을 가로로 배치 */
+    justify-content: center; /* 검색 박스를 중앙에 배치 */
+    align-items: center; /* 수직 정렬 */
+    margin: 0; /* 위아래 여백 */
+}
+
+.search input[type="text"] {
+    width: 250px; /* 검색 입력 필드의 너비 */
+    padding: 10px; /* 안쪽 여백 */
+    font-size: 1em; /* 폰트 크기 */
+    border: 2px solid #2A3854; /* 테두리 색상 */
+    border-radius: 5px 0 0 5px; /* 왼쪽 모서리 둥글게 */
+    outline: none; /* 포커스 시 기본 테두리 제거 */
+    height: 20px;
+}
+
+#qna .search button, #notice .search button {
+    padding: 10px 20px; /* 버튼 안쪽 여백 */
+    background-color: #2A3854; /* 버튼 배경색 */
+    color: white; /* 버튼 글자색 */
+    border: 2px solid #2A3854; /* 버튼 테두리 */
+    border-radius: 0 5px 5px 0; /* 오른쪽 모서리 둥글게 */
+    cursor: pointer; /* 커서 포인터 모양 */
+    font-size: 1em; /* 폰트 크기 */
+    transition: background-color 0.3s ease; /* 호버 시 배경색 전환 효과 */
+    height: 44px;
+}
 
