여행계획 새로고침

--- a/www/src/main/resources/static/css/tabStyle.css
+++ b/www/src/main/resources/static/css/tabStyle.css
@@ -161,3 +161,9 @@
             background-color: #4CAF50;
             color: white;
         }
+        .h3 h3{
+        padding-left: 15px;
+        padding-right: 180px;
+        display: inline-block;
+        }
+        
