--- a/www/src/main/resources/templates/member/like.html
+++ b/www/src/main/resources/templates/member/like.html
@@ -38,7 +38,7 @@
 
             <!-- 이미지가 없을 때 -->
             <img id="place_img" th:if="${row.firstimage == null or row.firstimage.isEmpty()}"
-                 th:src="@{/image/logo_w.png}" alt="Default Image" />
+                 th:src="@{/image/replace.png}" alt="Default Image" />
                         
                     </div>
                     <div class="text-box">
